build/log/idf_py_stdout_output_7309
[1/11] Building C object esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/bus_health_monitor.c.obj
FAILED: esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/bus_health_monitor.c.obj 
/home/mateus/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mateus/dev/projects/ENDAP/build/config -I/home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/include -I/home/mateus/esp/esp-idf/components/newlib/platform_include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/mateus/esp/esp-idf/components/heap/include -I/home/mateus/esp/esp-idf/components/log/include -I/home/mateus/esp/esp-idf/components/soc/include -I/home/mateus/esp/esp-idf/components/soc/esp32 -I/home/mateus/esp/esp-idf/components/soc/esp32/include -I/home/mateus/esp/esp-idf/components/hal/esp32/include -I/home/mateus/esp/esp-idf/components/hal/include -I/home/mateus/esp/esp-idf/components/hal/platform_port/include -I/home/mateus/esp/esp-idf/components/esp_rom/include -I/home/mateus/esp/esp-idf/components/esp_rom/include/esp32 -I/home/mateus/esp/esp-idf/components/esp_rom/esp32 -I/home/mateus/esp/esp-idf/components/esp_common/include -I/home/mateus/esp/esp-idf/components/esp_system/include -I/home/mateus/esp/esp-idf/components/esp_system/port/soc -I/home/mateus/esp/esp-idf/components/esp_system/port/include/private -I/home/mateus/esp/esp-idf/components/xtensa/include -I/home/mateus/esp/esp-idf/components/xtensa/esp32/include -I/home/mateus/esp/esp-idf/components/esp_timer/include -I/home/mateus/esp/esp-idf/components/lwip/include -I/home/mateus/esp/esp-idf/components/lwip/include/apps -I/home/mateus/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mateus/esp/esp-idf/components/lwip/lwip/src/include -I/home/mateus/esp/esp-idf/components/lwip/port/include -I/home/mateus/esp/esp-idf/components/lwip/port/freertos/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mateus/dev/projects/ENDAP/components/runtime/rs485_master/include -I/home/mateus/dev/projects/ENDAP/components/runtime/rs485_engine/include -I/home/mateus/dev/projects/ENDAP/components/comm/parser/include -I/home/mateus/dev/projects/ENDAP/components/runtime/latency_histogram -I/home/mateus/dev/projects/ENDAP/components/runtime/latency_histogram/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/mateus/dev/projects/ENDAP=. -fmacro-prefix-map=/home/mateus/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/bus_health_monitor.c.obj -MF esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/bus_health_monitor.c.obj.d -o esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/bus_health_monitor.c.obj -c /home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/bus_health_monitor.c
/home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/bus_health_monitor.c:18:17: error: redefinition of 'latency_sum'
   18 | static uint64_t latency_sum = 0;
      |                 ^~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/bus_health_monitor.c:6:17: note: previous definition of 'latency_sum' with type 'uint64_t' {aka 'long long unsigned int'}
    6 | static uint64_t latency_sum = 0;
      |                 ^~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/bus_health_monitor.c:19:17: error: redefinition of 'latency_count'
   19 | static uint32_t latency_count = 0;
      |                 ^~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/runtime/fieldbus/bus_health_monitor.c:7:17: note: previous definition of 'latency_count' with type 'uint32_t' {aka 'long unsigned int'}
    7 | static uint32_t latency_count = 0;
      |                 ^~~~~~~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/mateus/dev/projects/ENDAP/build/bootloader/esp-idf/esptool_py && /home/mateus/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/mateus/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mateus/dev/projects/ENDAP/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[3/11] Building C object esp-idf/core/CMakeFiles/__idf_core.dir/core_boot.c.obj
ninja: build stopped: subcommand failed.
